# tradecaptain

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml
database/: clickhouse_init.sql  questdb_init.sql
docs/: ARCHITECTURE.md  DESIGN_PATTERNS.md  GETTING_STARTED.md  README.md
frontend/: package.json
frontend/src/: App.tsx  main.tsx
infrastructure/benthos/: config.yaml
infrastructure/phlare/: config.yaml
schemas/: hft_messages.capnp  market_data.fbs
scripts/: setup-hugepages.sh  test-deployment.sh
services/api-gateway/: go.mod  main.go
services/api-gateway/internal/analytics/: clickhouse.go
services/api-gateway/internal/handlers/: market_data.go
services/api-gateway/internal/network/: iouring_server.go
services/api-gateway/internal/serialization/: msgpack.go
services/calculation-engine/: Cargo.toml
services/calculation-engine/src/: cache.rs  cache_optimized.rs  financial.rs  financial_impl.rs  lib.rs  main.rs  numa_optimizer.rs  orderbook.rs  persistence.rs  portfolio.rs  risk.rs  technical.rs  ultrafast_log.rs
services/data-collector/: go.mod  main.go
services/data-collector/internal/cache/: bigcache.go
services/data-collector/internal/collector/: alpha_vantage.go  collector.go  yahoo_finance.go
services/data-collector/internal/config/: config.go
services/data-collector/internal/messaging/: aeron.go
services/data-collector/internal/models/: market_data.go
services/data-collector/internal/storage/: badger_wal.go  kafka.go  postgres.go  postgres_impl.go  postgres_test.go  questdb.go  redis.go
