[package]
name = "calculation-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
statrs = "0.16"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance optimizations
moka = { version = "0.12", features = ["future"] }
crossbeam = "0.8"
rocksdb = "0.21"
rmp-serde = "1.1"  # MessagePack for Rust
memmap2 = "0.9"
ordered-float = "4.2"
capnp = "0.18"
libc = "0.2"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "calc-engine"
path = "src/main.rs"